# energy-sim

backend/: .gitignore  docker-compose.yml  pyproject.toml  tox.ini
backend/energy_sim/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: @deckgl.d.ts
frontend/src/components/layout/: PageFull.tsx  PageGap.tsx
frontend/src/components/map/: MapFullScreen.tsx
frontend/src/components/nav/: Header.tsx  NavItem.tsx
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
