[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ucabaur <ambroisel@theodo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.7"
django-import-export = "^3.2.0"


[tool.poetry.group.dev.dependencies]
ptvsd = "^4.3.2"
flake8 = "^6.1.0"
factory-boy = "^3.3.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
isort = "^5.12.0"
black = "^23.7.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.black]
extend-exclude = 'migrations'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
